<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home"
        android:id="@+id/home"
        android:icon="@drawable/home_icon"/>
    <item android:title="Settings"
        android:id="@+id/profile"
        android:icon="@drawable/account_icon"/>
</menu>